# ticTacToe

./: Homework16.cabal  LICENSE  README.md
Homework/Homework16/: Homework16.cabal  tags
Homework/Homework16/app/: Main.hs
Homework/Homework16/src/: Juego.hs  Tablero.hs
app/: Main.hs
src/: Juego.hs
