cabal-version:      3.0
name:               Homework16
version:            0.1.0.0
synopsis:           Tik Tak Toe
description:        Tik Tak Toe game made ir for the Homework 16 of the Haskell Course
license:            MIT
license-file:       LICENSE
author:             Francisco Ciordia
maintainer:         gatupancho@gmail.com
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable Homework16
    import:           warnings
    other-modules:    Tablero, Juego
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0
                     , random >= 1.2.1 && < 1.3
    hs-source-dirs:   app,
                      src
    default-language: Haskell2010
